--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,12 @@
 {{ partial "header" . }}
 
 <div class="intro">
-        <div><img class="center-image" src="images/logo_eRum2020.png" width="25%"/></div>
-
-        <h1>{{ .Site.Params.Chapter }}</h1>
+          <h1>{{ .Site.Params.Chapter }}</h1>
 
         <h2>{{ markdownify .Site.Params.Description }}</h2>
+        
+        <div><img class="center-image" src="images/brainCode.png" width="25%"/></div>
+
 </div>
 
 
